# Imaging

./: CMakeLists.txt  README.md  image_stitcher.cpp  image_stitcher.h  main.cpp
demo/: CMakeLists.txt  stitching_cli.cpp  stitching_cli.h  stitching_demo.cpp
inc/image_stitching/: image_stitcher.h
src/: image_stitcher.cpp
